Implement update station
